🚧 [FRONTEND] ajout du toaster en cas: d'attente, success ou error aux inscriptions

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -141,6 +141,16 @@ textarea {
  LAYOUTS
 
 ----------------------------------------------- */
+#application-toaster {
+  @extend .align-center;
+
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 45px;
+  position: fixed;
+  transition: bottom 0.5s;
+}
 
 #site-container {
   width: 100%;
