--- a/frontend/static/fontello/css/fontello-codes.css
+++ b/frontend/static/fontello/css/fontello-codes.css
@@ -6,6 +6,7 @@
 .icon-mail:before { content: '\e804'; } /* '' */
 .icon-thumbs-up:before { content: '\e805'; } /* '' */
 .icon-home:before { content: '\e806'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
 .icon-github:before { content: '\f300'; } /* '' */
 .icon-twitter:before { content: '\f309'; } /* '' */
 .icon-linkedin:before { content: '\f318'; } /* '' */
