--- a/frontend/static/fontello/css/fontello.css
+++ b/frontend/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?55580545');
-  src: url('../font/fontello.eot?55580545#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?55580545') format('woff2'),
-       url('../font/fontello.woff?55580545') format('woff'),
-       url('../font/fontello.ttf?55580545') format('truetype'),
-       url('../font/fontello.svg?55580545#fontello') format('svg');
+  src: url('../font/fontello.eot?50981393');
+  src: url('../font/fontello.eot?50981393#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?50981393') format('woff2'),
+       url('../font/fontello.woff?50981393') format('woff'),
+       url('../font/fontello.ttf?50981393') format('truetype'),
+       url('../font/fontello.svg?50981393#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?55580545#fontello') format('svg');
+    src: url('../font/fontello.svg?50981393#fontello') format('svg');
   }
 }
 */
@@ -62,6 +62,7 @@
 .icon-mail:before { content: '\e804'; } /* '' */
 .icon-thumbs-up:before { content: '\e805'; } /* '' */
 .icon-home:before { content: '\e806'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
 .icon-github:before { content: '\f300'; } /* '' */
 .icon-twitter:before { content: '\f309'; } /* '' */
 .icon-linkedin:before { content: '\f318'; } /* '' */
