--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -141,15 +141,37 @@ textarea {
  LAYOUTS
 
 ----------------------------------------------- */
-#application-toaster {
+#toaster {
   @extend .align-center;
 
   left: 0;
   right: 0;
-  bottom: 0;
   height: 45px;
+  bottom: -45px;
   position: fixed;
-  transition: bottom 0.5s;
+  line-height: 45px;
+  transition-duration: 0.5s;
+  transition-property: color, bottom, background-color;
+
+  &.toaster-error,
+  &.toaster-succes,
+  &.toaster-warning {
+    bottom: 0;
+  }
+
+  .relative {
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
+  }
+
+  button {
+    top: 15px;
+    right: 20px;
+    position: absolute;
+  }
 }
 
 #site-container {
@@ -278,8 +300,8 @@ body:not(.unsubscribe-page) #top-container {
 
 #main-footer {
   font-size: 0.8em;
+}
 
-  a {
-    text-decoration: underline;
-  }
+#main-footer a {
+  text-decoration: underline;
 }
