🚧 [FRONTEND] update du color background du header

--- a/frontend/scss/layouts/theme.scss
+++ b/frontend/scss/layouts/theme.scss
@@ -153,7 +153,7 @@ span.error {
 
 #main-navigation {
   &.issticky {
-    @extend .rainbow;
+    background-color: rgba(0, 0, 0, 0.85);
   }
 
   a {
