🚧 [FRONTEND] fix issue notification d'inscription au service

--- a/frontend/scss/layouts/base.scss
+++ b/frontend/scss/layouts/base.scss
@@ -154,7 +154,7 @@ textarea {
   transition-property: color, bottom, background-color;
 
   &.toaster-error,
-  &.toaster-succes,
+  &.toaster-success,
   &.toaster-warning {
     bottom: 0;
   }
