🚧 [ADMIN] ajout de la page des inscrits à la newsletter alerte

--- a/admin/src/fontello/css/fontello-codes.css
+++ b/admin/src/fontello/css/fontello-codes.css
@@ -36,4 +36,5 @@
 .icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-cog:before { content: '\e823'; } /* '' */
 .icon-monitor:before { content: '\e824'; } /* '' */
+.icon-mail:before { content: '\e825'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
