--- a/admin/src/fontello/css/fontello.css
+++ b/admin/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?50776954');
-  src: url('../font/fontello.eot?50776954#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?50776954') format('woff2'),
-       url('../font/fontello.woff?50776954') format('woff'),
-       url('../font/fontello.ttf?50776954') format('truetype'),
-       url('../font/fontello.svg?50776954#fontello') format('svg');
+  src: url('../font/fontello.eot?63804719');
+  src: url('../font/fontello.eot?63804719#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?63804719') format('woff2'),
+       url('../font/fontello.woff?63804719') format('woff'),
+       url('../font/fontello.ttf?63804719') format('truetype'),
+       url('../font/fontello.svg?63804719#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?50776954#fontello') format('svg');
+    src: url('../font/fontello.svg?63804719#fontello') format('svg');
   }
 }
 */
@@ -92,4 +92,5 @@
 .icon-left-open-mini:before { content: '\e822'; } /* '' */
 .icon-cog:before { content: '\e823'; } /* '' */
 .icon-monitor:before { content: '\e824'; } /* '' */
+.icon-mail:before { content: '\e825'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
