🚧 [ADMIN] suppr du switch pour determiner quelle popin doit s'ouvrir, le type de popin est defini par le composant

--- a/admin/src/scss/modules/popin.scss
+++ b/admin/src/scss/modules/popin.scss
@@ -4,10 +4,10 @@
 
 ----------------------------------- */
 
-.popin-fieldset {
-  background-color: #FFFFFF;
-  border-top: 1px solid #000000;
-}
+// .popin-fieldset {
+//   background-color: #FFFFFF;
+//   border-top: 1px solid #000000;
+// }
 
 #delete-popin {
   height: auto;
@@ -24,10 +24,10 @@
   }
 }
 
-#edit-popin {
-  @extend .p20;
-}
-
-#situation-popin {
-  width: 120px;
-}
+// #edit-popin {
+//   @extend .p20;
+// }
+//
+// #situation-popin {
+//   width: 120px;
+// }
