--- a/admin/src/scss/_popins.scss
+++ b/admin/src/scss/_popins.scss
@@ -9,12 +9,9 @@
 
 .popin {
   height: 0;
-  opacity: 0;
-  transition-duration: 0.5s;
-  transition-property: opacity;
+  z-index: 9999;
 
   &.opened {
-    opacity: 1;
     height: 100%;
   }
 }
@@ -23,11 +20,22 @@
   content: '';
 }
 
-.popin-container,
 .popin-foreground {
   width: 100%;
   height: 100%;
+  display: flex;
+  min-width: 100%;
+  min-height: 100%;
   position: relative;
+}
+
+.popin-container {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 40px;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
 .popin-controls {
@@ -42,12 +50,36 @@
   }
 }
 
-.popin-foreground {
-  display: flex;
+.edit-popin .popin-controls {
+  top: 20px;
+  right: 20px;
+
+  button {
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    font-size: 1.5em;
+  }
 }
 
-.popin-container {
-  margin: auto;
-  border-radius: 2px;
+.popin-header {
   position: relative;
+
+  .popin-title,
+  .popin-suptitle {
+    font-weight: normal;
+  }
+}
+
+.popin-content {
+  overflow: auto;
+}
+
+.popin-sidebar {
+  width: 250px;
+  min-width: 250px;
+
+  .submit-button button {
+    width: 100%;
+  }
 }
