--- a/admin/src/scss/modules/popin.scss
+++ b/admin/src/scss/modules/popin.scss
@@ -4,16 +4,13 @@
 
 ----------------------------------- */
 
-// .popin-fieldset {
-//   background-color: #FFFFFF;
-//   border-top: 1px solid #000000;
-// }
-
 #delete-popin {
-  height: auto;
   width: 360px;
+  height: auto;
+  margin: auto;
   font-size: 1.3em;
   margin-top: 100px;
+  border-radius: 2px;
 
   button {
     font-size: 1em;
@@ -23,11 +20,3 @@
     @extend .ml20;
   }
 }
-
-// #edit-popin {
-//   @extend .p20;
-// }
-//
-// #situation-popin {
-//   width: 120px;
-// }
