🚧 [ADMIN] update et fix des popins de modifications

--- a/admin/src/scss/_popins.scss
+++ b/admin/src/scss/_popins.scss
@@ -72,7 +72,12 @@
 }
 
 .popin-content {
-  overflow: auto;
+  overflow: hidden;
+}
+
+.popin-main {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .popin-sidebar {
