--- a/admin/src/scss/_popins.scss
+++ b/admin/src/scss/_popins.scss
@@ -30,11 +30,14 @@
 }
 
 .popin-container {
-  width: 100%;
+  width: 90%;
+  height: 90%;
+  margin: auto;
+  max-width: 90%;
+  max-height: 90%;
   overflow: hidden;
   position: relative;
-  margin-bottom: 40px;
-  border-radius: 0 0 4px 4px;
+  border-radius: 4px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
