--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -18,3 +18,4 @@
 @import './modules/form.scss';
 @import './modules/popin.scss';
 @import './modules/theme.scss';
+@import './modules/toasts.scss';
