🚧 [ADMIN] ajout de la gestion des blocks CMS pour le frontend

--- a/admin/src/static/fontello/css/fontello-codes.css
+++ b/admin/src/static/fontello/css/fontello-codes.css
@@ -37,4 +37,5 @@
 .icon-cog:before { content: '\e823'; } /* '' */
 .icon-monitor:before { content: '\e824'; } /* '' */
 .icon-mail:before { content: '\e825'; } /* '' */
+.icon-feather:before { content: '\e826'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
