--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -18,10 +18,15 @@ input[type='number'] {
 }
 
 textarea {
+  width: 100%;
   height: 2.4em;
 
   &.large {
     height: 6em;
+  }
+
+  &.xlarge {
+    height: 18em;
   }
 }
 
@@ -130,6 +135,14 @@ label.inline {
 .situation-input {
   .picker-container {
     width: 106px;
+  }
+}
+
+.markdown-editor {
+  .markdown-editor-navs button {
+    width: 100px;
+    margin-left: 1px;
+    border-radius: 2px 2px 0 0;
   }
 }
 
