--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?66096169');
-  src: url('../font/fontello.eot?66096169#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?66096169') format('woff2'),
-       url('../font/fontello.woff?66096169') format('woff'),
-       url('../font/fontello.ttf?66096169') format('truetype'),
-       url('../font/fontello.svg?66096169#fontello') format('svg');
+  src: url('../font/fontello.eot?54318037');
+  src: url('../font/fontello.eot?54318037#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?54318037') format('woff2'),
+       url('../font/fontello.woff?54318037') format('woff'),
+       url('../font/fontello.ttf?54318037') format('truetype'),
+       url('../font/fontello.svg?54318037#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?66096169#fontello') format('svg');
+    src: url('../font/fontello.svg?54318037#fontello') format('svg');
   }
 }
 */
@@ -93,4 +93,5 @@
 .icon-cog:before { content: '\e823'; } /* '' */
 .icon-monitor:before { content: '\e824'; } /* '' */
 .icon-mail:before { content: '\e825'; } /* '' */
+.icon-feather:before { content: '\e826'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
