--- a/admin/src/static/fontello/css/fontello-codes.css
+++ b/admin/src/static/fontello/css/fontello-codes.css
@@ -38,4 +38,6 @@
 .icon-monitor:before { content: '\e824'; } /* '' */
 .icon-mail:before { content: '\e825'; } /* '' */
 .icon-feather:before { content: '\e826'; } /* '' */
+.icon-code:before { content: '\e827'; } /* '' */
+.icon-eye:before { content: '\e828'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
