--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?54318037');
-  src: url('../font/fontello.eot?54318037#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?54318037') format('woff2'),
-       url('../font/fontello.woff?54318037') format('woff'),
-       url('../font/fontello.ttf?54318037') format('truetype'),
-       url('../font/fontello.svg?54318037#fontello') format('svg');
+  src: url('../font/fontello.eot?89914889');
+  src: url('../font/fontello.eot?89914889#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?89914889') format('woff2'),
+       url('../font/fontello.woff?89914889') format('woff'),
+       url('../font/fontello.ttf?89914889') format('truetype'),
+       url('../font/fontello.svg?89914889#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54318037#fontello') format('svg');
+    src: url('../font/fontello.svg?89914889#fontello') format('svg');
   }
 }
 */
@@ -94,4 +94,6 @@
 .icon-monitor:before { content: '\e824'; } /* '' */
 .icon-mail:before { content: '\e825'; } /* '' */
 .icon-feather:before { content: '\e826'; } /* '' */
+.icon-code:before { content: '\e827'; } /* '' */
+.icon-eye:before { content: '\e828'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
