--- a/admin/src/scss/styles.scss
+++ b/admin/src/scss/styles.scss
@@ -19,3 +19,5 @@
 @import './modules/popin.scss';
 @import './modules/theme.scss';
 @import './modules/toasts.scss';
+@import './modules/preloader.scss';
+@import './modules/navigation.scss';
