--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -1,5 +1,5 @@
-@import './leaflet/leaflet.css';
-@import './fontello/css/fontello-embedded.css';
+@import './static/leaflet/leaflet.css';
+@import './static/fontello/css/fontello-embedded.css';
 
 // SCSS Files
 @import './_base.scss';
