🚧 [ADMIN] update des icons fontello

--- a/admin/src/static/fontello/css/fontello-codes.css
+++ b/admin/src/static/fontello/css/fontello-codes.css
@@ -40,4 +40,5 @@
 .icon-feather:before { content: '\e826'; } /* '' */
 .icon-code:before { content: '\e827'; } /* '' */
 .icon-eye:before { content: '\e828'; } /* '' */
+.icon-clipboard:before { content: '\e829'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
