--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?89914889');
-  src: url('../font/fontello.eot?89914889#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?89914889') format('woff2'),
-       url('../font/fontello.woff?89914889') format('woff'),
-       url('../font/fontello.ttf?89914889') format('truetype'),
-       url('../font/fontello.svg?89914889#fontello') format('svg');
+  src: url('../font/fontello.eot?85180044');
+  src: url('../font/fontello.eot?85180044#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?85180044') format('woff2'),
+       url('../font/fontello.woff?85180044') format('woff'),
+       url('../font/fontello.ttf?85180044') format('truetype'),
+       url('../font/fontello.svg?85180044#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?89914889#fontello') format('svg');
+    src: url('../font/fontello.svg?85180044#fontello') format('svg');
   }
 }
 */
@@ -96,4 +96,5 @@
 .icon-feather:before { content: '\e826'; } /* '' */
 .icon-code:before { content: '\e827'; } /* '' */
 .icon-eye:before { content: '\e828'; } /* '' */
+.icon-clipboard:before { content: '\e829'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
