🚧 [WIDGET] move des fichiers scss de l'app vers le dossier layouts

--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -8,8 +8,8 @@ $white: #FFFFFF;
 
 body {
   font-size: 11px;
-  background-color: #F1F1F1;
   font-family: 'Open Sans', sans-serif;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .geojson-layer {
