🚧 [WIDGET] cleanup de l'UI
- suppr de sidebar left
- suppr des padding autour du module
- changement de layer en fonction du zoom
- changement d'opacité en fonction du zoom

--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -17,15 +17,14 @@ body {
   fill: $blue;
   stroke: $blue;
   stroke-width: 1;
-  fill-opacity: 0.4;
   transition: all 0.5s;
 
   &:hover {
-    fill-opacity: 0.6;
+    opacity: 0.6;
   }
 
   &.active {
-    fill-opacity: 0.8;
+    opacity: 0.8;
   }
 }
 
