🚧 [WIDGET] modification de la vue carte
- suppr des boutons de zoom
- udpate de la documentation
- ajout du bouton de la vue satellite
- position de la tooltip sur une zone
- ajout du bouton de la vue géolocalisation
- move des fichiers leaflet inputs dans le dossier inputs

--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import './static/leaflet/leaflet.css';
+@import './static/fontello/css/animation.css';
 @import './static/fontello/css/fontello-embedded.css';
 
 // SCSS Files
