--- a/frontend/static/fontello/css/fontello-codes.css
+++ b/frontend/static/fontello/css/fontello-codes.css
@@ -7,6 +7,7 @@
 .icon-thumbs-up:before { content: '\e805'; } /* '' */
 .icon-home:before { content: '\e806'; } /* '' */
 .icon-cancel:before { content: '\e807'; } /* '' */
+.icon-docs:before { content: '\e809'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-github:before { content: '\f300'; } /* '' */
 .icon-twitter:before { content: '\f309'; } /* '' */
