--- a/frontend/static/fontello/css/fontello.css
+++ b/frontend/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?76523994');
-  src: url('../font/fontello.eot?76523994#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?76523994') format('woff2'),
-       url('../font/fontello.woff?76523994') format('woff'),
-       url('../font/fontello.ttf?76523994') format('truetype'),
-       url('../font/fontello.svg?76523994#fontello') format('svg');
+  src: url('../font/fontello.eot?5865772');
+  src: url('../font/fontello.eot?5865772#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?5865772') format('woff2'),
+       url('../font/fontello.woff?5865772') format('woff'),
+       url('../font/fontello.ttf?5865772') format('truetype'),
+       url('../font/fontello.svg?5865772#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?76523994#fontello') format('svg');
+    src: url('../font/fontello.svg?5865772#fontello') format('svg');
   }
 }
 */
@@ -63,6 +63,7 @@
 .icon-thumbs-up:before { content: '\e805'; } /* '' */
 .icon-home:before { content: '\e806'; } /* '' */
 .icon-cancel:before { content: '\e807'; } /* '' */
+.icon-docs:before { content: '\e809'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-github:before { content: '\f300'; } /* '' */
 .icon-twitter:before { content: '\f309'; } /* '' */
