--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -1,10 +1,10 @@
-fieldset h3 {
-  margin-bottom: 20px;
-
-  ~ p {
-    margin-top: 0;
-  }
-}
+// fieldset h3 {
+//   margin-bottom: 20px;
+//
+//   ~ p {
+//     margin-top: 0;
+//   }
+// }
 
 // application
 #root,
@@ -12,79 +12,79 @@ fieldset h3 {
   min-height: 100vh;
 }
 
-#app-header {
-  padding: 20px 0;
-  background-color: rgba(0, 0, 0, 0.1);
-
-  .title {
-    letter-spacing: 0.4em;
-
-    small {
-      font-size: 0.4em;
-      font-weight: 100;
-      letter-spacing: 0.1em;
-    }
-  }
-
-  .title,
-  .subtitle {
-    margin: 0;
-    font-weight: normal;
-  }
-}
-
-#app-sidebar-left {
-  .title {
-    margin-bottom: 20px;
-    padding-bottom: 7px;
-    border-bottom: 1px solid #000000;
-  }
-}
-
-#app-footer {
-  width: 100%;
-  padding: 10px;
-  max-height: 33px; // height text + padding
-  margin: auto auto 0 auto;
-  background-color: rgba(0, 0, 0, 0.1);
-
-  .right a ~ a,
-  .right span ~ a {
-    margin-left: 12px;
-  }
-}
-
-/* ---- THEME ----- */
-#stepper-progress {
-  background-color: #E4E4E4;
-}
-
-#user-case {
-  margin: 12px 0;
-  font-size: 12px;
-
-  * {
-    display: block;
-  }
-
-  strong {
-    font-weight: 900;
-  }
-}
-
-#selecteur-departement {
-  top: 12px;
-  right: 12px;
-  height: 24px;
-  font-weight: 100;
-  padding: 4px 12px;
-  position: absolute;
-  border-radius: 12px;
-
-  .icon {
-    margin-left: 12px;
-  }
-}
+// #app-header {
+//   padding: 20px 0;
+//   background-color: rgba(0, 0, 0, 0.1);
+//
+//   .title {
+//     letter-spacing: 0.4em;
+//
+//     small {
+//       font-size: 0.4em;
+//       font-weight: 100;
+//       letter-spacing: 0.1em;
+//     }
+//   }
+//
+//   .title,
+//   .subtitle {
+//     margin: 0;
+//     font-weight: normal;
+//   }
+// }
+//
+// #app-sidebar-left {
+//   .title {
+//     margin-bottom: 20px;
+//     padding-bottom: 7px;
+//     border-bottom: 1px solid #000000;
+//   }
+// }
+//
+// #app-footer {
+//   width: 100%;
+//   padding: 10px;
+//   max-height: 33px; // height text + padding
+//   margin: auto auto 0 auto;
+//   background-color: rgba(0, 0, 0, 0.1);
+//
+//   .right a ~ a,
+//   .right span ~ a {
+//     margin-left: 12px;
+//   }
+// }
+//
+// /* ---- THEME ----- */
+// #stepper-progress {
+//   background-color: #E4E4E4;
+// }
+//
+// #user-case {
+//   margin: 12px 0;
+//   font-size: 12px;
+//
+//   * {
+//     display: block;
+//   }
+//
+//   strong {
+//     font-weight: 900;
+//   }
+// }
+//
+// #selecteur-departement {
+//   top: 12px;
+//   right: 12px;
+//   height: 24px;
+//   font-weight: 100;
+//   padding: 4px 12px;
+//   position: absolute;
+//   border-radius: 12px;
+//
+//   .icon {
+//     margin-left: 12px;
+//   }
+// }
 
 /* ------------------------------------------------------------
 
@@ -92,55 +92,55 @@ RESPONSIVE
 
 ------------------------------------------------------------ */
 
-@media (max-width: 870px) {
-  body {
-    overflow-y: scroll;
-  }
-
-  #app-header {
-    padding: 20px 0;
-    padding-left: 20px;
-
-    .acenter {
-      text-align: left;
-    }
-  }
-
-  #stepper-progress {
-    display: none !important;
-    visibility: hidden !important;
-  }
-
-  #app-content {
-    padding: 0;
-    flex-direction: column-reverse;
-
-    .column ~ .column {
-      margin-top: 0;
-      margin-left: 0;
-    }
-  }
-
-  #zoning-map ~ .flex1 {
-    margin-left: 0;
-  }
-
-  #stepper-form {
-    .list-input {
-      width: 100%;
-    }
-
-    .input-type-list .flex-columns,
-    .input-type-choice .flex-columns {
-      flex-direction: column;
-
-      & label ~ label {
-        margin-left: 0;
-      }
-    }
-
-    .input-type-map .flex-columns {
-      flex-direction: column-reverse;
-    }
-  }
-}
+// @media (max-width: 870px) {
+//   body {
+//     overflow-y: scroll;
+//   }
+//
+//   #app-header {
+//     padding: 20px 0;
+//     padding-left: 20px;
+//
+//     .acenter {
+//       text-align: left;
+//     }
+//   }
+//
+//   #stepper-progress {
+//     display: none !important;
+//     visibility: hidden !important;
+//   }
+//
+//   #app-content {
+//     padding: 0;
+//     flex-direction: column-reverse;
+//
+//     .column ~ .column {
+//       margin-top: 0;
+//       margin-left: 0;
+//     }
+//   }
+//
+//   #zoning-map ~ .flex1 {
+//     margin-left: 0;
+//   }
+//
+//   #stepper-form {
+//     .list-input {
+//       width: 100%;
+//     }
+//
+//     .input-type-list .flex-columns,
+//     .input-type-choice .flex-columns {
+//       flex-direction: column;
+//
+//       & label ~ label {
+//         margin-left: 0;
+//       }
+//     }
+//
+//     .input-type-map .flex-columns {
+//       flex-direction: column-reverse;
+//     }
+//   }
+// }
