--- a/widget/src/scss/layouts/map.scss
+++ b/widget/src/scss/layouts/map.scss
@@ -1,6 +1,8 @@
 #leaflet-map {
   width: 100%;
-  height: 320px;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   background-color: #C4C4C4;
 
   & ~ .flex1 {
