--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -7,39 +7,39 @@ $blue: #61AFEF;
 $white: #FFFFFF;
 
 body {
-  font-size: 11px;
+  font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   background-color: rgba(255, 255, 255, 0);
 }
 
-.geojson-layer {
-  opacity: 1;
-  fill: $blue;
-  stroke: $blue;
-  stroke-width: 1;
-  transition: all 0.5s;
+// .geojson-layer {
+//   opacity: 1;
+//   fill: $blue;
+//   stroke: $blue;
+//   stroke-width: 1;
+//   transition: all 0.5s;
+//
+//   &:hover {
+//     opacity: 0.6;
+//   }
+//
+//   &.active {
+//     opacity: 0.8;
+//   }
+// }
 
-  &:hover {
-    opacity: 0.6;
-  }
-
-  &.active {
-    opacity: 0.8;
-  }
-}
-
-#app-header {
-  color: $white;
-  // stylelint-disable-next-line
-  background-image: linear-gradient(
-    312deg,
-    $header0 0%,
-    $header1 68%,
-    $header2 100%
-  );
-}
-
-#selecteur-departement {
-  color: $white;
-  background-color: #01BCD5;
-}
+// #app-header {
+//   color: $white;
+//   // stylelint-disable-next-line
+//   background-image: linear-gradient(
+//     312deg,
+//     $header0 0%,
+//     $header1 68%,
+//     $header2 100%
+//   );
+// }
+//
+// #selecteur-departement {
+//   color: $white;
+//   background-color: #01BCD5;
+// }
