❌ [ADMIN] ajout des popin/form/table/page pour les questions

--- a/admin/src/static/fontello/css/fontello-codes.css
+++ b/admin/src/static/fontello/css/fontello-codes.css
@@ -41,4 +41,5 @@
 .icon-code:before { content: '\e827'; } /* '' */
 .icon-eye:before { content: '\e828'; } /* '' */
 .icon-clipboard:before { content: '\e829'; } /* '' */
+.icon-list:before { content: '\e82a'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
