--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?85180044');
-  src: url('../font/fontello.eot?85180044#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?85180044') format('woff2'),
-       url('../font/fontello.woff?85180044') format('woff'),
-       url('../font/fontello.ttf?85180044') format('truetype'),
-       url('../font/fontello.svg?85180044#fontello') format('svg');
+  src: url('../font/fontello.eot?73576979');
+  src: url('../font/fontello.eot?73576979#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?73576979') format('woff2'),
+       url('../font/fontello.woff?73576979') format('woff'),
+       url('../font/fontello.ttf?73576979') format('truetype'),
+       url('../font/fontello.svg?73576979#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?85180044#fontello') format('svg');
+    src: url('../font/fontello.svg?73576979#fontello') format('svg');
   }
 }
 */
@@ -97,4 +97,5 @@
 .icon-code:before { content: '\e827'; } /* '' */
 .icon-eye:before { content: '\e828'; } /* '' */
 .icon-clipboard:before { content: '\e829'; } /* '' */
+.icon-list:before { content: '\e82a'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
