--- a/admin/src/static/fontello/css/fontello.css
+++ b/admin/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?73576979');
-  src: url('../font/fontello.eot?73576979#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?73576979') format('woff2'),
-       url('../font/fontello.woff?73576979') format('woff'),
-       url('../font/fontello.ttf?73576979') format('truetype'),
-       url('../font/fontello.svg?73576979#fontello') format('svg');
+  src: url('../font/fontello.eot?26114385');
+  src: url('../font/fontello.eot?26114385#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?26114385') format('woff2'),
+       url('../font/fontello.woff?26114385') format('woff'),
+       url('../font/fontello.ttf?26114385') format('truetype'),
+       url('../font/fontello.svg?26114385#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?73576979#fontello') format('svg');
+    src: url('../font/fontello.svg?26114385#fontello') format('svg');
   }
 }
 */
@@ -72,7 +72,6 @@
 .icon-check:before { content: '\e80e'; } /* '' */
 .icon-info-circled:before { content: '\e80f'; } /* '' */
 .icon-network:before { content: '\e810'; } /* '' */
-.icon-tag:before { content: '\e811'; } /* '' */
 .icon-logout:before { content: '\e812'; } /* '' */
 .icon-alert:before { content: '\e813'; } /* '' */
 .icon-database:before { content: '\e814'; } /* '' */
@@ -99,3 +98,6 @@
 .icon-clipboard:before { content: '\e829'; } /* '' */
 .icon-list:before { content: '\e82a'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
+.icon-town-hall:before { content: '\e83c'; } /* '' */
+.icon-marquee:before { content: '\e847'; } /* '' */
+.icon-wpforms:before { content: '\f298'; } /* '' */
