--- a/admin/src/scss/modules/theme.scss
+++ b/admin/src/scss/modules/theme.scss
@@ -120,17 +120,14 @@ textarea:disabled {
   opacity: 0.5;
 }
 
-.markdown-editor-navs button {
-  color: $grey !important;
-  background-color: transparent;
+.markdown-editor-views button {
+  color: $gray;
 
-  &.active {
-    font-weight: bold;
-    color: $dark !important;
-  }
-
-  &:hover {
-    background-color: transparent;
+  &.active,
+  &:disabled {
+    opacity: 1;
+    color: $white;
+    background-color: $greyActive;
   }
 }
 
