--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -1,5 +1,3 @@
-$markdownPreviewHeight: 180px;
-
 input,
 select,
 textarea,
@@ -10,8 +8,12 @@ textarea,
 
 input,
 textarea {
+  outline: none;
   font-size: 1.2em;
+  padding: 9px 7px;
+  border-width: 1px;
   line-height: 1.2em;
+  border-style: solid;
 }
 
 select {
@@ -20,20 +22,6 @@ select {
   outline: none;
   font-size: 1em;
   line-height: 1em;
-}
-
-input,
-textarea,
-.markdown-editor-preview {
-  outline: none;
-  padding: 9px 7px;
-  border-width: 1px;
-  border-style: solid;
-}
-
-.markdown-editor-preview {
-  border-width: 0;
-  line-height: inherit;
 }
 
 input[type='number'] {
@@ -50,14 +38,8 @@ textarea {
 
   &.xlarge {
     resize: none;
+    height: 180px;
   }
-}
-
-textarea.xlarge,
-.markdown-editor-preview {
-  height: $markdownPreviewHeight;
-  min-height: $markdownPreviewHeight;
-  max-height: $markdownPreviewHeight;
 }
 
 button {
@@ -166,16 +148,11 @@ label.inline {
   }
 }
 
-.markdown-editor-views button {
-  width: 100px;
-  margin-left: 1px;
-  border-radius: 2px 2px 0 0;
-}
-
-fieldset .tagvalues,
-fieldset .radio-group,
-fieldset .checkbox-group {
-  @extend .px12;
+.tagvalues,
+.radio-group,
+.checkbox-group {
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .flex-rows > .submit-button {
