🚧 [ADMIN] ajout de la selection des display/type pour une question

--- a/admin/src/scss/modules/form.scss
+++ b/admin/src/scss/modules/form.scss
@@ -87,8 +87,8 @@ fieldset .as-form-label {
 
 .selectbox {
   flex: 1;
+  padding: 0;
   display: flex;
-  padding: 0 7px;
   font-size: 1.2em;
   border-width: 1px;
   border-style: solid;
