--- a/widget/src/scss/_base.scss
+++ b/widget/src/scss/_base.scss
@@ -86,7 +86,6 @@ h6 {
  CLASSES
 
 ------------------------------------------------------ */
-
 .clearfix {
   *zoom: 1;
 }
@@ -127,14 +126,6 @@ h6 {
   width: 100%;
   height: 100%;
   position: relative;
-}
-
-.marged {
-  margin: 20px;
-}
-
-.padded {
-  padding: 12px;
 }
 
 .noborder {
@@ -185,63 +176,14 @@ h6 {
  TEXT Alignments
 
 -------------------------------------------- */
-.aleft {
+.align-left {
   text-align: left;
 }
 
-.aright {
+.align-right {
   text-align: right;
 }
 
-.acenter {
+.align-center {
   text-align: center;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
-}
-
-/* --------------------------------------------
-
- FLEX Alignments
-
--------------------------------------------- */
-.flex-columns {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-rows {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.flex-end {
-  justify-content: flex-end;
-}
-
-.flex-start {
-  justify-content: start;
-}
-
-.flex-center {
-  justify-content: center;
-}
-
-.flex-between {
-  justify-content: space-between;
-}
-
-.flex-around {
-  justify-content: space-around;
 }
