--- a/widget/src/scss/layouts/map.scss
+++ b/widget/src/scss/layouts/map.scss
@@ -1,3 +1,37 @@
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  cursor: default;
+}
+
+.leaflet-map {
+  position: relative;
+}
+
+.leaflet-map-controls {
+  right: 12px;
+  bottom: 12px;
+  z-index: 9999;
+  position: absolute;
+}
+
+.leaflet-bottom.leaflet-right {
+  right: inherit;
+}
+
+.leaflet-control-attribution {
+  opacity: 0.2;
+  float: inherit;
+  font-size: 0.8em;
+  background-color: transparent;
+}
+
+.leaflet-control-attribution a,
+.leaflet-control-attribution a:hover {
+  color: #000000;
+}
+
 #leaflet-map {
   width: 100%;
   height: 100%;
@@ -8,11 +42,4 @@
   & ~ .flex1 {
     margin-left: 20px;
   }
-}
-
-.leaflet-container {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  cursor: default;
 }
