--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -12,4 +12,4 @@
 @import './layouts/base.scss';
 @import './layouts/map.scss';
 @import './layouts/form.scss';
-// @import './layouts/theme.scss';
+@import './layouts/theme.scss';
