🚧 [ADMIN] ajout du bouton pour rendre optionnel la visibilite des zones sur la carte

--- a/widget/src/static/fontello/css/fontello-codes.css
+++ b/widget/src/static/fontello/css/fontello-codes.css
@@ -14,3 +14,4 @@
 .icon-cancel:before { content: '\e80c'; } /* '' */
 .icon-map:before { content: '\e80d'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
+.icon-marquee:before { content: '\e847'; } /* '' */
