--- a/widget/src/static/fontello/css/fontello.css
+++ b/widget/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?51863650');
-  src: url('../font/fontello.eot?51863650#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?51863650') format('woff2'),
-       url('../font/fontello.woff?51863650') format('woff'),
-       url('../font/fontello.ttf?51863650') format('truetype'),
-       url('../font/fontello.svg?51863650#fontello') format('svg');
+  src: url('../font/fontello.eot?78792340');
+  src: url('../font/fontello.eot?78792340#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?78792340') format('woff2'),
+       url('../font/fontello.woff?78792340') format('woff'),
+       url('../font/fontello.ttf?78792340') format('truetype'),
+       url('../font/fontello.svg?78792340#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51863650#fontello') format('svg');
+    src: url('../font/fontello.svg?78792340#fontello') format('svg');
   }
 }
 */
@@ -70,3 +70,4 @@
 .icon-cancel:before { content: '\e80c'; } /* '' */
 .icon-map:before { content: '\e80d'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
+.icon-marquee:before { content: '\e847'; } /* '' */
