🚧 [WIDGET][GRAPH] update de la carte avec la zone/maxbounds/center d'un department

--- a/widget/src/scss/layouts/theme.scss
+++ b/widget/src/scss/layouts/theme.scss
@@ -62,6 +62,11 @@ body {
   &.active {
     opacity: 0.8;
   }
+
+  &.department {
+    stroke: $black;
+    fill-opacity: 0;
+  }
 }
 
 // #app-header {
