--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -9,8 +9,12 @@
 @import './_margins.scss';
 
 // application
+@import './layouts/z-index.scss';
 @import './layouts/base.scss';
-@import './layouts/map.scss';
 @import './layouts/form.scss';
 @import './layouts/theme.scss';
 @import './layouts/tippy.scss';
+
+// map
+@import './layouts/map.scss';
+@import './layouts/map-marker.scss';
