--- a/widget/src/static/fontello/css/fontello-codes.css
+++ b/widget/src/static/fontello/css/fontello-codes.css
@@ -13,5 +13,6 @@
 .icon-camera:before { content: '\e80b'; } /* '' */
 .icon-cancel:before { content: '\e80c'; } /* '' */
 .icon-map:before { content: '\e80d'; } /* '' */
+.icon-location:before { content: '\e80e'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-marquee:before { content: '\e847'; } /* '' */
