--- a/widget/src/scss/styles.scss
+++ b/widget/src/scss/styles.scss
@@ -18,3 +18,6 @@
 // map
 @import './layouts/map.scss';
 @import './layouts/map-marker.scss';
+
+// responsive
+@import './layouts/responsive.scss';
