--- a/widget/src/scss/layouts/base.scss
+++ b/widget/src/scss/layouts/base.scss
@@ -42,6 +42,7 @@ form {
   }
 
   .navigation button {
+    width: 170px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
   }
