--- a/widget/src/static/fontello/css/fontello.css
+++ b/widget/src/static/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?23504790');
-  src: url('../font/fontello.eot?23504790#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?23504790') format('woff2'),
-       url('../font/fontello.woff?23504790') format('woff'),
-       url('../font/fontello.ttf?23504790') format('truetype'),
-       url('../font/fontello.svg?23504790#fontello') format('svg');
+  src: url('../font/fontello.eot?38927160');
+  src: url('../font/fontello.eot?38927160#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?38927160') format('woff2'),
+       url('../font/fontello.woff?38927160') format('woff'),
+       url('../font/fontello.ttf?38927160') format('truetype'),
+       url('../font/fontello.svg?38927160#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?23504790#fontello') format('svg');
+    src: url('../font/fontello.svg?38927160#fontello') format('svg');
   }
 }
 */
@@ -70,5 +70,7 @@
 .icon-cancel:before { content: '\e80c'; } /* '' */
 .icon-map:before { content: '\e80d'; } /* '' */
 .icon-location:before { content: '\e80e'; } /* '' */
+.icon-reply:before { content: '\e80f'; } /* '' */
+.icon-check:before { content: '\e810'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-marquee:before { content: '\e847'; } /* '' */
